--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "tailwind-jekyll",
-  "version": "4.0.0",
-  "description": "A starter kit for using Tailwind with Jekyll",
-  "main": "gulpfile.js",
+  "name": "bryant.io",
+  "version": "1.0.0",
+  "main": "gulpfile.babel.js",
   "devDependencies": {
     "autoprefixer": "9.6.1",
     "babel-preset-es2015": "6.24.1",
@@ -23,5 +22,5 @@
     "start": "gulp serve"
   },
   "author": "Taylor Bryant",
-  "license": "ISC"
+  "license": "MIT"
 }
