--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mdx-js/loader": "^1.2.2",
     "@next/mdx": "^9.0.3",
     "@zeit/next-css": "^1.0.1",
+    "date-fns": "^1.30.1",
     "next": "^9.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
