--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
   },
   "homepage": "https://github.com/taylorbryant/bryant.io#readme",
   "dependencies": {
-    "@mdx-js/loader": "^1.2.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-brands-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@mdx-js/loader": "^1.3.0",
     "@next/mdx": "^9.0.3",
     "@zeit/next-css": "^1.0.1",
     "date-fns": "^1.30.1",
-    "next": "^9.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "next": "^9.0.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "1.2.0",
