--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "date-fns": "^1.30.1",
     "next": "^9.0.3",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-ga": "^2.6.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "1.2.0",
