--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@zeit/next-css": "^1.0.1",
     "date-fns": "^1.30.1",
     "next": "^9.0.3",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-ga": "^2.6.0"
@@ -39,6 +40,8 @@
     "babel-plugin-macros": "2.6.1",
     "babel-plugin-preval": "3.0.1",
     "cssnano": "4.1.10",
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "tailwindcss": "1.1.1"
   }
 }
