--- a/package.json
+++ b/package.json
@@ -23,16 +23,23 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-brands-svg-icons": "^5.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@mdx-js/loader": "^1.3.0",
     "@next/mdx": "^9.0.3",
     "@zeit/next-css": "^1.0.1",
     "date-fns": "^1.30.1",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-ga": "^2.6.0"
+    "react-ga": "^2.6.0",
+    "react-is": "^16.9.0",
+    "react-ssr-prepass": "^1.0.6",
+    "urql": "^1.3.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "1.2.0",
