--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-ga": "^2.6.0",
     "react-is": "^16.9.0",
     "react-ssr-prepass": "^1.0.6",
+    "styled-components": "^4.3.2",
     "urql": "^1.3.0"
   },
   "devDependencies": {
