--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "isomorphic-unfetch": "^3.0.0",
+    "lodash": "^4.17.15",
     "next": "^9.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
