Use dotenv for GitHub API token, set up Prettier and ESLint

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@next/mdx": "^9.0.3",
     "@zeit/next-css": "^1.0.1",
     "date-fns": "^1.30.1",
+    "dotenv": "^8.1.0",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "isomorphic-unfetch": "^3.0.0",
@@ -50,7 +51,12 @@
     "babel-plugin-preval": "3.0.1",
     "cssnano": "4.1.10",
     "eslint": "6.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "7.14.3",
+    "husky": "^3.0.4",
+    "lint-staged": "^9.2.3",
+    "prettier": "1.18.2",
     "tailwindcss": "1.1.1"
   }
 }
