--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@mapbox/rehype-prism": "^0.3.1",
     "@mdx-js/loader": "^1.3.0",
     "@next/mdx": "^9.0.3",
     "@zeit/next-css": "^1.0.1",
@@ -58,5 +59,20 @@
     "lint-staged": "9.2.3",
     "prettier": "1.18.2",
     "tailwindcss": "1.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,md,mdx}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
