--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next",
     "build": "next build",
     "export": "npm run build && next export",
+    "post-export": "node move-public-files-to-root.js",
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
