--- a/package.json
+++ b/package.json
@@ -22,33 +22,33 @@
   },
   "homepage": "https://github.com/taylorbryant/bryant.io#readme",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.21",
-    "@fortawesome/free-brands-svg-icons": "^5.10.1",
-    "@fortawesome/free-solid-svg-icons": "^5.10.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@mapbox/rehype-prism": "^0.3.1",
-    "@mdx-js/loader": "^1.3.0",
-    "@next/mdx": "^9.0.3",
-    "@zeit/next-css": "^1.0.1",
-    "date-fns": "^2.0.0",
-    "dotenv": "^8.1.0",
-    "graphql": "^14.4.2",
-    "graphql-tag": "^2.10.1",
-    "isomorphic-unfetch": "^3.0.0",
-    "lodash": "^4.17.15",
-    "next": "^9.0.3",
-    "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-ga": "^2.6.0",
-    "react-is": "^16.9.0",
-    "react-ssr-prepass": "^1.0.6",
-    "styled-components": "^4.3.2",
-    "urql": "^1.3.0"
+    "@apollo/react-hooks": "3.0.1",
+    "@apollo/react-ssr": "3.0.1",
+    "@fortawesome/fontawesome-svg-core": "1.2.21",
+    "@fortawesome/free-brands-svg-icons": "5.10.1",
+    "@fortawesome/free-solid-svg-icons": "5.10.1",
+    "@fortawesome/react-fontawesome": "0.1.4",
+    "@mapbox/rehype-prism": "0.3.1",
+    "@mdx-js/loader": "1.3.0",
+    "@next/mdx": "9.0.3",
+    "@types/react": "16.9.2",
+    "@zeit/next-css": "1.0.1",
+    "apollo-boost": "0.4.4",
+    "date-fns": "2.0.1",
+    "dotenv": "8.1.0",
+    "graphql": "14.4.2",
+    "isomorphic-unfetch": "3.0.0",
+    "lodash": "4.17.15",
+    "next": "9.0.3",
+    "prop-types": "15.7.2",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-ga": "2.6.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "1.2.0",
     "autoprefixer": "9.6.1",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-macros": "2.6.1",
     "babel-plugin-preval": "3.0.1",
     "cssnano": "4.1.10",
