--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next",
     "build": "next build",
     "export": "npm run build && next export",
-    "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -32,10 +31,13 @@
     "@next/mdx": "9.1.5",
     "@types/react": "16.9.16",
     "@zeit/next-css": "1.0.1",
-    "apollo-boost": "0.4.4",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
     "date-fns": "2.8.1",
     "dotenv": "8.2.0",
     "graphql": "14.5.8",
+    "graphql-tag": "^2.10.1",
     "isomorphic-unfetch": "3.0.0",
     "lodash": "4.17.15",
     "next": "9.1.5",
@@ -48,6 +50,7 @@
     "@fullhuman/postcss-purgecss": "1.3.0",
     "autoprefixer": "9.7.3",
     "babel-eslint": "10.0.3",
+    "babel-plugin-graphql-tag": "^2.5.0",
     "babel-plugin-macros": "2.8.0",
     "babel-plugin-preval": "4.0.0",
     "cssnano": "4.1.10",
