--- a/package.json
+++ b/package.json
@@ -30,20 +30,19 @@
     "@fortawesome/free-solid-svg-icons": "5.12.0",
     "@fortawesome/react-fontawesome": "0.1.8",
     "@mapbox/rehype-prism": "0.4.0",
-    "@mdx-js/loader": "1.5.4",
-    "@next/mdx": "9.1.7",
+    "@mdx-js/loader": "1.5.5",
+    "@next/mdx": "9.2.0",
     "@types/react": "16.9.17",
-    "@zeit/next-css": "1.0.1",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link-http": "^1.5.16",
+    "apollo-cache-inmemory": "1.6.5",
+    "apollo-client": "2.6.8",
+    "apollo-link-http": "1.5.16",
     "date-fns": "2.9.0",
     "dotenv": "8.2.0",
     "graphql": "14.5.8",
-    "graphql-tag": "^2.10.1",
+    "graphql-tag": "2.10.1",
     "isomorphic-unfetch": "3.0.0",
     "lodash": "4.17.15",
-    "next": "9.1.7",
+    "next": "9.2.0",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -53,7 +52,7 @@
     "@fullhuman/postcss-purgecss": "1.3.0",
     "autoprefixer": "9.7.4",
     "babel-eslint": "10.0.3",
-    "babel-plugin-graphql-tag": "^2.5.0",
+    "babel-plugin-graphql-tag": "2.5.0",
     "babel-plugin-macros": "2.8.0",
     "babel-plugin-preval": "4.0.0",
     "cssnano": "4.1.10",
