--- a/package.json
+++ b/package.json
@@ -76,13 +76,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,css,md,mdx}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
+    "*.{js,css,md,mdx}": "prettier --write",
+    "*.js": "eslint --fix"
   }
 }
