--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-ga": "2.7.0"
+    "react-ga": "2.7.0",
+    "react-inlinesvg": "1.2.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "2.0.6",
