--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-ga": "3.1.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "0.1.2",
     "autoprefixer": "9.8.5",
     "babel-eslint": "10.1.0",
     "babel-plugin-macros": "2.8.0",
