--- a/package.json
+++ b/package.json
@@ -40,14 +40,13 @@
   "devDependencies": {
     "autoprefixer": "9.8.6",
     "babel-eslint": "10.1.0",
-    "babel-plugin-macros": "2.8.0",
-    "babel-plugin-preval": "5.0.0",
     "eslint": "7.6.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.20.5",
     "eslint-plugin-react-hooks": "4.0.8",
+    "file-loader": "6.0.0",
     "husky": "4.2.5",
     "import-sort-cli": "6.0.0",
     "import-sort-parser-babylon": "6.0.0",
