Move config for import sort and nvmrc into package.josn

--- a/package.json
+++ b/package.json
@@ -55,9 +55,18 @@
     "prettier": "2.1.2",
     "tailwindcss": "1.8.10"
   },
+  "engines": {
+    "node": "^12"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
+    }
+  },
+  "importSort": {
+    ".js": {
+      "parser": "babylon",
+      "style": "module"
     }
   },
   "lint-staged": {
