--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "export": "npm run build && next export",
     "start": "next start",
     "fix:dependencies": "npm audit fix",
-    "fix:import-sort": "import-sort --write '**/*.js'",
-    "fix:lint": "eslint --ext .jsx --ext .js . --fix",
+    "fix:import-sort": "import-sort --write '**/*.{js}'",
+    "fix:lint": "eslint --ext .jsx --ext .js --ext .mdx . --fix",
     "fix:prettier": "prettier --write '**/*.{js,css,md,mdx}'",
     "fix:tailwind-css-class-order": "rustywind --write .",
-    "fix": "npm run fix:dependencies && npm run fix:lint && npm run fix:tailwind-css-class-order && npm run fix:prettier && npm run fix:import-sort"
+    "fix": "npm run fix:dependencies && npm run fix:tailwind-css-class-order && npm run fix:import-sort && npm run fix:lint && npm run fix:prettier"
   },
   "repository": {
     "type": "git",
@@ -43,6 +43,7 @@
     "eslint": "7.9.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-mdx": "1.8.2",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.1",
     "eslint-plugin-react-hooks": "4.1.2",
@@ -71,7 +72,8 @@
     }
   },
   "lint-staged": {
-    "*.{js,css,md,mdx}": "prettier --write",
-    "*.js": "eslint --fix"
+    "*.{js,css,md,mdx}": "npm run fix:prettier",
+    "*.{js,mdx}": "npm run fix:lint",
+    "*.{js}": "npm run fix:import-sort && npm run fix:tailwind-css-class-order"
   }
 }
