--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "date-fns": "2.16.1",
     "next": "10.0.3",
     "prop-types": "15.7.2",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-ga": "3.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "10.0.3",
     "babel-eslint": "10.1.0",
     "eslint": "7.14.0",
     "eslint-plugin-import": "2.22.1",
@@ -53,9 +54,10 @@
     "import-sort-parser-babylon": "6.0.0",
     "import-sort-style-module": "6.0.0",
     "lint-staged": "10.5.2",
+    "postcss": "8.1.10",
     "prettier": "2.2.0",
     "rustywind": "0.6.7",
-    "tailwindcss": "1.9.6"
+    "tailwindcss": "2.0.1"
   },
   "engines": {
     "node": "^12"
