--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --ext .jsx,.js,.ts,.tsx,.mdx --fix --ignore-path ./.gitignore ."
   },
   "repository": {
     "type": "git",
@@ -20,26 +21,31 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.15.1",
-    "@fortawesome/react-fontawesome": "0.1.13",
-    "@mapbox/rehype-prism": "0.5.0",
-    "@mdx-js/loader": "1.6.22",
-    "@next/mdx": "10.0.3",
-    "date-fns": "2.16.1",
-    "next": "10.0.3",
-    "prop-types": "15.7.2",
+    "@fortawesome/react-fontawesome": "0.1.14",
+    "next": "10.0.4",
+    "next-seo": "4.17.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-ga": "3.3.0"
   },
   "devDependencies": {
+    "@mapbox/rehype-prism": "0.5.0",
+    "@mdx-js/loader": "1.6.22",
+    "@next/mdx": "10.0.4",
+    "@types/node": "14.14.16",
+    "@types/react": "17.0.0",
+    "@typescript-eslint/eslint-plugin": "4.11.0",
+    "@typescript-eslint/parser": "4.11.0",
     "autoprefixer": "10.1.0",
     "babel-eslint": "10.1.0",
-    "eslint": "7.15.0",
-    "eslint-config-prettier": "7.0.0",
+    "eslint": "7.16.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-typescript": "12.0.0",
+    "eslint-config-prettier": "7.1.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-mdx": "1.8.2",
-    "eslint-plugin-prettier": "3.2.0",
+    "eslint-plugin-prettier": "3.3.0",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
@@ -47,15 +53,17 @@
     "husky": "4.3.6",
     "lint-staged": "10.5.3",
     "postcss": "8.2.1",
+    "postcss-100vh-fix": "1.0.2",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-hover-media-feature": "^1.0.0",
     "postcss-preset-env": "6.7.0",
     "prettier": "2.2.1",
     "rustywind": "0.7.0",
-    "tailwindcss": "2.0.2"
+    "tailwindcss": "2.0.2",
+    "typescript": "4.1.3"
   },
   "engines": {
-    "node": "^12"
+    "node": "12"
   },
   "husky": {
     "hooks": {
@@ -63,7 +71,7 @@
     }
   },
   "lint-staged": {
-    "*.{css}": "prettier --write",
-    "*.{js,md,mdx}": "eslint --fix --ignore-path ./.gitignore"
+    "*.{css,md,json}": "prettier --write",
+    "*.{js,jsx,ts,tsx,mdx}": "eslint --fix --ignore-path ./.gitignore"
   }
 }
